delete searchcontroller, serach index,edit view

--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -129,7 +129,7 @@
         <div class="layout-page">
           <!-- Navbar -->
 
-          <nav
+          {# <nav
             class="layout-navbar container-xxl navbar navbar-expand-xl navbar-detached align-items-center bg-navbar-theme"
             id="layout-navbar"
           >
@@ -137,23 +137,23 @@
               <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
                 <i class="bx bx-menu bx-sm"></i>
               </a>
-            </div>
-
-            <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
+            </div> #}
+{# 
+            <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse"> #}
               <!-- Search -->
-              <div class="navbar-nav align-items-center">
+              {# <div class="navbar-nav align-items-center">
                 <div class="nav-item d-flex align-items-center">
                   <i class="bx bx-search fs-4 lh-0"></i>
                   <input
                     type="text"
                     class="form-control border-0 shadow-none"
                     placeholder="Search..."
-                    aria-label="Search..."
-                  />
+                    aria-label="Search..." #}
+                  {# />
                 </div>
-              </div>
+              </div> #}
               <!-- /Search -->
-
+  <div
               <ul class="navbar-nav flex-row align-items-center ms-auto">
                 <!-- User -->
                 <li class="nav-item navbar-dropdown dropdown-user dropdown">
@@ -169,7 +169,7 @@
                 <!--/ User -->
               </ul>
             </div>
-          </nav>
+          {# </nav> #}
             <body style="background-image:url('https://international.fpt.edu.vn/web/image/image.gallery/28/image')">
 
 </body>
