--- a/templates/student/index.html.twig
+++ b/templates/student/index.html.twig
@@ -1,7 +1,7 @@
 
 {% extends 'admin.html.twig' %}
 
-{% block title %}Hello ProductController!{% endblock %}
+{% block title %}Student Management{% endblock %}
 
 {% block body %}
   <div className="page-heading pb-2 mt-4 mb-2 ">
