--- a/templates/subject/index.html.twig
+++ b/templates/subject/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin.html.twig' %}
 
-{% block title %}Hello SubjectController!{% endblock %}
+{% block title %}Subject Management!{% endblock %}
 
 {% block body %}
 
